    + Add checks for suspend, caller, complete/compgen, declare/typeset,
      disown, builtin, set -[BHT], alias -p, unalias -a, local with
      options or an assigned value and $BASH(_*). Thanks to Raphael
      Geissert for the patch (Closes: #469050)
    + Modify each of the simple shell variable tests (e.g. $RANDOM) to
      also match ${variable}
  * bts: Allow the sendmail command to begin with a ~ (Closes: #469207)
  * debcommit: Set $SVKDIFF before calling "svk diff" (Closes: #469238)

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Sat, 01 Mar 2008 11:42:02 +0000

devscripts (2.10.18.1) unstable; urgency=low

  The "I need a bigger brown paper bag" upload

  * checkbashsisms: Simplify the >&/&>file check and in the process fix
    another couple of potential false positives.

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Fri, 29 Feb 2008 08:55:16 +0000

devscripts (2.10.18) unstable; urgency=low

  [ Patrick Schoenfeld ]
  * licensecheck: Detect a less common form of GPL usage

  [ Adam D. Barratt ]
  * checkbashisms: Fix a couple of brown paper bag issues with the >&file
    and herestring checks added in the last release. Thanks to Raphael
    Geissert for spotting the breakage so quickly.
  * debchange: Fix an off-by-one in the fix for #452806 that caused an
    extra blank line to be added before the trailer line

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Fri, 29 Feb 2008 06:50:51 +0000

devscripts (2.10.17) unstable; urgency=low

  The "Pia for DPL" upload

  [ Adam D. Barratt ]
  * checkbashisms:
    + Fix a false positive in the $(( test (Closes: #465364)
    + Add detection for <<<, $(OS|MACH)TYPE, $HOST(TYPE|NAME), $EUID,
      $DIRSTACK, $SECONDS and /dev/(tcp|udp) (Closes: #465386)
    + Enhance heredoc detection to not trigger on <<<
  * Debbugs.pm: Update to match the current debbugs SOAP interface. Add
    status(), usertags(), versions() and versions_with_arch(),